# snapshot

./: .gitignore  Cargo.toml  deny.toml  justfile
.github/workflows/: rust.yml
cli/: Cargo.toml  build.rs
cli/src/: args.rs  create.rs  delete.rs  list.rs  main.rs  restore.rs  util.rs
debian/: changelog  control  copyright  pop-snapshot.postinst  pop-snapshot.prerm
interface/: Cargo.toml
interface/src/: daemon.rs  lib.rs  snapshot.rs
service/: Cargo.toml
service/data/: com.system76.PopSnapshot.xml  pop-snapshot.service  pop-snapshot.toml
service/src/: config.rs  main.rs  service.rs  util.rs
service/src/service/: snapshot.rs
service/src/snapshot/: create.rs  delete.rs  metadata.rs  mount.rs  restore.rs
src/: main.rs  service.rs  snapshot.rs  util.rs
src/service/: snapshot.rs
src/snapshot/: create.rs  delete.rs  list.rs  metadata.rs  mount.rs  restore.rs
