[package]
name = "pop-snapshot"
description = "A daemon/tool for creating btrfs snapshots of a Pop!_OS system"
authors = ["Lucy <lucy@system76.com>"]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
publish = false

[dependencies]
anyhow = "1"
libbtrfsutil = "0.3"
sys-mount = { version = "1.5", default-features = false }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
zbus = { version = "2", default-features = false, features = ["tokio"] }
time = { version = "0.3", features = ["formatting"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
