[package]
name = "pop-snapshot-cli"
description = "Manage btrfs snapshots"
authors = ["Lucy <lucy@system76.com>"]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
publish = false

[[bin]]
name = "pop-snapshot"
path = "src/main.rs"

[dependencies]
clap = { version = "3", features = ["derive"] }
color-eyre = "0.6"
owo-colors = "3"
tokio = { version = "1", features = ["full"] }
zbus = { version = "2", default-features = false, features = ["tokio"] }
zbus-pop-snapshot = { path = "../interface" }

[build-dependencies]
clap = { version = "3", features = ["derive"] }
clap_complete = "3.1.4"
