[package]
name = "pop-snapshot-daemon"
description = "A daemon/tool for creating btrfs snapshots of a Pop!_OS system"
authors = ["Lucy <lucy@system76.com>"]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
publish = false

[dependencies]
anyhow = "1"
async-signals = "0.4"
futures-util = "0.3.21"
libbtrfsutil = "0.3"
libc = "0.2.126"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sys-mount = { version = "1.5", default-features = false }
tempfile = "3"
time = { version = "0.3", features = ["serde-well-known"] }
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
zbus = { version = "2", default-features = false, features = ["tokio"] }
